# Diary-Agent-CLI

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
src/diary_agent/: __init__.py  cli.py  config.py
src/diary_agent/db/: base.py  models.py  session.py
src/diary_agent/db/repositories/: __init__.py  diary.py  sessions.py  settings.py  topics.py
src/diary_agent/domain/: __init__.py  enums.py  runtime_state.py  schemas.py
src/diary_agent/llm/: __init__.py  base.py  factory.py  providers.py
src/diary_agent/services/: __init__.py  conversation_orchestrator.py  diary_synthesizer.py  memory_writer.py  question_composer.py  session_planner.py  signal_extractor.py  topic_registry.py
tests/: conftest.py  test_conversation_orchestrator.py  test_memory_writer.py  test_session_planner.py
