[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diary-agent"
version = "0.1.0"
description = "CLI-first, local-first diary agent centered around long-lived topics."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14,<2.0",
    "rich>=13.9,<14.0",
    "sqlalchemy>=2.0.36,<3.0",
    "typer>=0.15,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
]

[project.scripts]
diary-agent = "diary_agent.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
